--- a/src/app/components/main-info/main-info.component.html
+++ b/src/app/components/main-info/main-info.component.html
@@ -60,7 +60,7 @@
 <p>
   <fa-icon [icon]="faComments" [size]="'lg'" class="mr-3"></fa-icon>
   {{'SIDEBAR_COMPARE_ABOUT_3_1' | translate}}
-  <a id="mailto" href="mailto:florian.auer@informatik.uni-augsburg.de" target="_blank"><b>Florian Auer</b></a>
+  <a href="mailto:florian.auer@informatik.uni-augsburg.de" id="mailto" target="_blank"><b>Florian Auer</b></a>
   {{'SIDEBAR_COMPARE_ABOUT_3_2' | translate}}
 </p>
 
