--- a/src/app/components/main-mappings/main-mappings.component.html
+++ b/src/app/components/main-mappings/main-mappings.component.html
@@ -14,7 +14,7 @@
   <!-- PASSTHROUGH -->
   <div
     *ngIf="dataService.selectedPassthroughMapping">
-    <table id="tableDetailsPassthrough" class="table">
+    <table class="table" id="tableDetailsPassthrough">
       <thead>
       <tr>
         <th>{{'MAIN_MAPPINGS_TH_COL' | translate}}</th>
@@ -45,7 +45,7 @@
 
     <div class="table-responsive">
 
-      <table id="tableDetailsDiscrete" class="table">
+      <table class="table" id="tableDetailsDiscrete">
         <thead>
         <tr>
           <th>{{dataService.selectedDiscreteMappingProperty}}</th>
@@ -58,28 +58,28 @@
         </thead>
 
         <tbody>
-        <tr [ngClass]="dataService.selectedForDeletion === styleProperty ? 'table-danger' : ''"
-            *ngFor="let styleProperty of dataService.selectedDiscreteMapping|stylePropertiesByCol : dataService.selectedDiscreteMappingProperty; let styleIndex = index">
+        <tr *ngFor="let styleProperty of dataService.selectedDiscreteMapping|stylePropertiesByCol : dataService.selectedDiscreteMappingProperty; let styleIndex = index"
+            [ngClass]="dataService.selectedForDeletion === styleProperty ? 'table-danger' : ''">
           <td>{{styleProperty}}</td>
 
           <td
             *ngFor="let is of dataService.selectedDiscreteMapping|isByCol : dataService.selectedDiscreteMappingProperty">
           <span
             #tmp>{{dataService.selectedDiscreteMapping|styleValueByColAndKey : dataService.selectedDiscreteMappingProperty : styleProperty : is}}</span>
-            <span *ngIf="tmp.innerHTML.startsWith('#')" class="badge badge-pill border"
-                  [ngStyle]="{'background-color': dataService.selectedDiscreteMapping|styleValueByColAndKey : dataService.selectedDiscreteMappingProperty : styleProperty : is}">
+            <span *ngIf="tmp.innerHTML.startsWith('#')" [ngStyle]="{'background-color': dataService.selectedDiscreteMapping|styleValueByColAndKey : dataService.selectedDiscreteMappingProperty : styleProperty : is}"
+                  class="badge badge-pill border">
             &nbsp;
           </span>
           </td>
 
           <td>
-            <button class="btn btn-outline-warning"
-                    [routerLink]="['', { outlets: {primary: ['edit', mapHint + styleIndex, '1']} }]">
+            <button [routerLink]="['', { outlets: {primary: ['edit', mapHint + styleIndex, '1']} }]"
+                    class="btn btn-outline-warning">
               <fa-icon [icon]="faEdit"></fa-icon>
             </button>
           </td>
           <td>
-            <button class="btn btn-outline-danger" (click)="toggleRemoveDiscreteSingle(styleIndex)">
+            <button (click)="toggleRemoveDiscreteSingle(styleIndex)" class="btn btn-outline-danger">
               <fa-icon [icon]="faTrash"></fa-icon>
             </button>
           </td>
@@ -104,7 +104,7 @@
   <div
     *ngIf="dataService.selectedContinuousMapping">
 
-    <table id="tableDetailsContinuous" class="table">
+    <table class="table" id="tableDetailsContinuous">
 
       <thead>
       <tr>
@@ -113,8 +113,8 @@
 
         <!-- EDIT -->
         <th>
-          <button class="btn btn-block btn-outline-warning"
-                  [routerLink]="['', { outlets: {primary: ['edit', mapId, '1']} }]">
+          <button [routerLink]="['', { outlets: {primary: ['edit', mapId, '1']} }]"
+                  class="btn btn-block btn-outline-warning">
             <fa-icon [icon]="faEdit"></fa-icon>
           </button>
         </th>
@@ -130,8 +130,8 @@
           <span #defaultLower>
             {{dataService.selectedContinuousMapping.lowers[0]}}
           </span>
-          <span *ngIf="dataService.selectedContinuousMapping.isColor" class="badge-pill border"
-                [ngStyle]="{'background-color': defaultLower.innerHTML || ''}">&nbsp;</span>
+          <span *ngIf="dataService.selectedContinuousMapping.isColor" [ngStyle]="{'background-color': defaultLower.innerHTML || ''}"
+                class="badge-pill border">&nbsp;</span>
         </td>
       </tr>
 
@@ -139,8 +139,8 @@
         <td>{{dataService.selectedContinuousMapping.thresholds[index]}}</td>
         <td colspan="2">
           {{eq}}
-          <span *ngIf="dataService.selectedContinuousMapping.isColor" class="badge-pill border"
-                [ngStyle]="{'background-color': eq}">&nbsp;</span>
+          <span *ngIf="dataService.selectedContinuousMapping.isColor" [ngStyle]="{'background-color': eq}"
+                class="badge-pill border">&nbsp;</span>
         </td>
       </tr>
       <tr>
@@ -150,8 +150,8 @@
           <span #defaultGreater>
             {{dataService.selectedContinuousMapping.greaters[dataService.selectedContinuousMapping.greaters.length - 1]}}
           </span>
-          <span *ngIf="dataService.selectedContinuousMapping.isColor" class="badge-pill border"
-                [ngStyle]="{'background-color': defaultGreater.innerHTML || ''}">&nbsp;</span>
+          <span *ngIf="dataService.selectedContinuousMapping.isColor" [ngStyle]="{'background-color': defaultGreater.innerHTML || ''}"
+                class="badge-pill border">&nbsp;</span>
         </td>
       </tr>
 
