--- a/src/app/components/main-stats/main-stats.component.html
+++ b/src/app/components/main-stats/main-stats.component.html
@@ -19,23 +19,23 @@
       </a>
     </div>
 
-<!--    <div class="col">-->
+    <!--    <div class="col">-->
 
-      <!--    <a-->
-      <!--      [routerLink]="['', { outlets: {primary: ['graph', dataService.networkSelected.id], sidebar: ['compare', dataService.networkSelected.id]} }]"-->
-      <!--      class="btn btn-block btn-outline-secondary mt-2"-->
-      <!--      data-toggle="tooltip" ngbTooltip="{{'MAIN_STATS_TT_COMPARE' | translate}}" placement="bottom"-->
-      <!--      role="button">-->
-      <!--      <fa-icon [icon]="faExchangeAlt"></fa-icon>&nbsp;{{'MAIN_STATS_BTN_COMPARE' | translate}}-->
-      <!--    </a>-->
-<!--      <button-->
-<!--        class="btn btn-block btn-outline-secondary mt-2 mb-2"-->
-<!--        data-toggle="tooltip" ngbTooltip="{{'MAIN_STATS_TT_COMPARE' | translate}}" placement="bottom"-->
-<!--        [disabled]="true">-->
-<!--        <fa-icon [icon]="faExchangeAlt"></fa-icon>&nbsp;{{'MAIN_STATS_BTN_COMPARE' | translate}}-->
-<!--      </button>-->
+    <!--    <a-->
+    <!--      [routerLink]="['', { outlets: {primary: ['graph', dataService.networkSelected.id], sidebar: ['compare', dataService.networkSelected.id]} }]"-->
+    <!--      class="btn btn-block btn-outline-secondary mt-2"-->
+    <!--      data-toggle="tooltip" ngbTooltip="{{'MAIN_STATS_TT_COMPARE' | translate}}" placement="bottom"-->
+    <!--      role="button">-->
+    <!--      <fa-icon [icon]="faExchangeAlt"></fa-icon>&nbsp;{{'MAIN_STATS_BTN_COMPARE' | translate}}-->
+    <!--    </a>-->
+    <!--      <button-->
+    <!--        class="btn btn-block btn-outline-secondary mt-2 mb-2"-->
+    <!--        data-toggle="tooltip" ngbTooltip="{{'MAIN_STATS_TT_COMPARE' | translate}}" placement="bottom"-->
+    <!--        [disabled]="true">-->
+    <!--        <fa-icon [icon]="faExchangeAlt"></fa-icon>&nbsp;{{'MAIN_STATS_BTN_COMPARE' | translate}}-->
+    <!--      </button>-->
 
-<!--    </div>-->
+    <!--    </div>-->
   </div>
 
   <div class="card">
@@ -67,8 +67,8 @@
 
           <a
             *ngFor="let akv of dataService.selectedNetwork.aspectKeyValuesNodes.concat(dataService.selectedNetwork.aspectKeyValuesEdges); let index = index"
-            class="list-group-item list-group-item-action" id="list-{{index}}-list" data-toggle="list"
-            href="#list-{{index}}" role="tab" aria-controls="{{index}}">
+            aria-controls="{{index}}" class="list-group-item list-group-item-action" data-toggle="list"
+            href="#list-{{index}}" id="list-{{index}}-list" role="tab">
             {{akv.name}}
           </a>
         </div>
@@ -77,14 +77,14 @@
         <div class="tab-content" id="nav-tabContent">
           <div
             *ngFor="let akv of dataService.selectedNetwork.aspectKeyValuesNodes.concat(dataService.selectedNetwork.aspectKeyValuesEdges); let index = index"
-            class="tab-pane fade" id="list-{{index}}" role="tabpanel" aria-labelledby="list-{{index}}-list">
+            aria-labelledby="list-{{index}}-list" class="tab-pane fade" id="list-{{index}}" role="tabpanel">
 
             <!-- distribution -->
             <h5>{{'MAIN_STATS_DISTRIBUTION_TITLE' | translate}}</h5>
-            <app-chart *ngIf="akv.chartContinuousDistribution"
-                       [numberOfBins]="akv.binSize"
+            <app-chart (binSizeEmitter)="setBinSize($event, akv)"
+                       *ngIf="akv.chartContinuousDistribution"
                        [chartObject]="akv.chartContinuousDistribution"
-                       (binSizeEmitter)="setBinSize($event, akv)"></app-chart>
+                       [numberOfBins]="akv.binSize"></app-chart>
 
             <app-chart *ngIf="akv.chartDiscreteDistribution"
                        [chartObject]="akv.chartDiscreteDistribution"></app-chart>
@@ -92,15 +92,15 @@
             <!-- aspect coverage -->
             <h5>
               {{'MAIN_STATS_COVERAGE_TITLE' | translate}}
-              <span class="badge badge-pill border"
-                    [ngClass]="akv.coverage < 25 ? 'bg-warning' : (akv.coverage < 75 ? 'bg-primary' : 'bg-success')">
+              <span [ngClass]="akv.coverage < 25 ? 'bg-warning' : (akv.coverage < 75 ? 'bg-primary' : 'bg-success')"
+                    class="badge badge-pill border">
                 {{akv.coverage}} %
               </span>
             </h5>
 
             <div class="progress">
-              <div class="progress-bar" role="progressbar" [ngStyle]="{'width.%': akv.coverage}"
-                   aria-valuenow="{{akv.coverage}}" aria-valuemin="0" aria-valuemax="100"></div>
+              <div [ngStyle]="{'width.%': akv.coverage}" aria-valuemax="100" aria-valuemin="0"
+                   aria-valuenow="{{akv.coverage}}" class="progress-bar" role="progressbar"></div>
             </div>
             <small>{{'MAIN_STATS_COVERAGE_HINT' | translate}}</small>
 
