--- a/src/app/components/parts/main-mappings-available-attributes/main-mappings-available-attributes.component.html
+++ b/src/app/components/parts/main-mappings-available-attributes/main-mappings-available-attributes.component.html
@@ -2,14 +2,14 @@
   <div><h5>{{headline | translate}}</h5></div>
 </div>
 
-<div class="d-flex flex-wrap" *ngFor="let attribute of attributeListFull; let attributeIndex = index">
+<div *ngFor="let attribute of attributeListFull; let attributeIndex = index" class="d-flex flex-wrap">
 
   <div class="flex-grow-1 mt-2">
     {{attribute.name}}
   </div>
 
   <!-- continuous -->
-  <div class="ml-auto mt-2" *ngIf="typeHint.ec || typeHint.nc">
+  <div *ngIf="typeHint.ec || typeHint.nc" class="ml-auto mt-2">
 
     <!-- more than one exists -->
     <span *ngIf="attribute.mapPointerC.length > 1">
@@ -53,7 +53,7 @@
   </div>
 
   <!-- discrete -->
-  <div class="ml-auto mt-2" *ngIf="typeHint.ed || typeHint.nd">
+  <div *ngIf="typeHint.ed || typeHint.nd" class="ml-auto mt-2">
 
     <!-- exists -->
     <button *ngIf="attribute.mapPointerD.length > 0"
@@ -78,7 +78,7 @@
   </div>
 
   <!-- passthrough -->
-  <div class="ml-auto mt-2" *ngIf="typeHint.ep || typeHint.np">
+  <div *ngIf="typeHint.ep || typeHint.np" class="ml-auto mt-2">
 
     <!-- more than one mapping exists -->
     <span *ngIf="attribute.mapPointerP.length > 1">
