--- a/src/app/components/parts/main-mappings-new-form/main-mappings-new-form.component.html
+++ b/src/app/components/parts/main-mappings-new-form/main-mappings-new-form.component.html
@@ -5,15 +5,15 @@
     <label class="col-4 col-form-label"
            for="{{typeHint.ec ? 'ec' : 'nc'}}CssProperty">{{'MAIN_MAPPINGS_NEW_CSS_PROPERTY_LABEL' | translate}}</label>
     <div class="col-6">
-      <input [(ngModel)]="styleProperty" (input)="emitStyleProperty()" [readOnly]="isEdit" class="form-control"
+      <input (input)="emitStyleProperty()" [(ngModel)]="styleProperty" [readOnly]="isEdit" class="form-control"
              id="{{typeHint.ec ? 'ec' : 'nc'}}CssProperty"
              name="cCssProperty" type="text">
       <small class="form-text text-muted">{{'MAIN_MAPPINGS_NEW_CSS_HINT' | translate}}</small>
     </div>
     <div class="col-2 form-check">
       <input (click)="toggleNeedsColorValidation(!needsColorValidation(styleProperty))"
-             [disabled]="isEdit"
-             [checked]="needsColorValidation(styleProperty)" class="form-check-input"
+             [checked]="needsColorValidation(styleProperty)"
+             [disabled]="isEdit" class="form-check-input"
              id="{{typeHint.ec ? 'ec' : 'nc'}}ColorValidation"
              type="checkbox">
       <label class="form-check-label" for="{{typeHint.ec ? 'ec' : 'nc'}}ColorValidation">
@@ -27,7 +27,7 @@
     <label class="col-4 col-form-label"
            for="{{typeHint.ec ? 'ec' : 'nc'}}DefaultLower">{{'MAIN_MAPPINGS_NEW_DEFAULT_LOW' | translate}}</label>
     <div class="col-8">
-      <input [disabled]="true" [(ngModel)]="thresholds[0].propertyValue"
+      <input [(ngModel)]="thresholds[0].propertyValue" [disabled]="true"
              class="form-control"
              id="{{typeHint.ec ? 'ec' : 'nc'}}DefaultLower"
              name="{{typeHint.ec ? 'ec' : 'nc'}}DefaultLower"
@@ -39,8 +39,8 @@
   <!-- thresholds -->
   <div *ngFor="let threshold of thresholds; let index = index" class="form-group row">
     <div class="col-4">
-      <input [disabled]="!threshold.isEditable"
-             [(ngModel)]="threshold.value"
+      <input [(ngModel)]="threshold.value"
+             [disabled]="!threshold.isEditable"
              class="form-control"
              id="{{typeHint.ec ? 'ec' : 'nc'}}Threshold{{index}}"
              name="{{typeHint.ec ? 'ec' : 'nc'}}Threshold{{index}}"
@@ -54,17 +54,17 @@
              name="{{typeHint.ec ? 'ec' : 'nc'}}Value{{index}}"
              type="number">
       <input *ngIf="needsColorValidation(styleProperty)" [(ngModel)]="threshold.propertyValue"
-             type="color"
              class="form-control form-control-color"
              id="colorContinuous{{index}}"
              name="colorContinuous{{index}}"
+             type="color"
              value="{{threshold.propertyValue}}">
     </div>
 
     <div class="col-1">
-      <button class="btn btn-outline-danger"
-              (click)="removeThreshold(index)"
-              [disabled]="!threshold.isEditable">
+      <button (click)="removeThreshold(index)"
+              [disabled]="!threshold.isEditable"
+              class="btn btn-outline-danger">
         <fa-icon [icon]="faTrash"></fa-icon>
       </button>
     </div>
@@ -85,7 +85,7 @@
     <label class="col-4 col-form-label"
            for="{{typeHint.ec ? 'ec' : 'nc'}}DefaultGreater">{{'MAIN_MAPPINGS_NEW_DEFAULT_GREAT' | translate}}</label>
     <div class="col-8">
-      <input [disabled]="true" [(ngModel)]="thresholds[1].propertyValue"
+      <input [(ngModel)]="thresholds[1].propertyValue" [disabled]="true"
              class="form-control"
              id="{{typeHint.ec ? 'ec' : 'nc'}}DefaultGreater"
              name="{{typeHint.ec ? 'ec' : 'nc'}}DefaultGreater"
@@ -118,13 +118,13 @@
     <div class="col-4">
       <!-- submit: new -->
       <button
-        [routerLink]="['', { outlets: {primary: ['mappings', mapType + (getNextIdForMappingType()) ]} }]"
-        (click)="submitNewMapping()" *ngIf="!isEdit"
-        class="btn btn-block btn-outline-success" data-toggle="tooltip"
+        (click)="submitNewMapping()"
+        *ngIf="!isEdit" [disabled]="alreadyExists"
+        [routerLink]="['', { outlets: {primary: ['mappings', mapType + (getNextIdForMappingType()) ]} }]" class="btn btn-block btn-outline-success"
+        data-toggle="tooltip"
         ngbTooltip="{{'MAIN_MAPPINGS_NEW_SUBMIT' | translate}}"
         placement="top"
-        type="button"
-        [disabled]="alreadyExists">
+        type="button">
         <fa-icon [icon]="faCheck"></fa-icon>
       </button>
 
@@ -149,7 +149,7 @@
            for="{{mapType}}CssProperty">{{'MAIN_MAPPINGS_NEW_CSS_PROPERTY_LABEL' | translate}}</label>
 
     <div [ngClass]="!needsFontFaceSpecificForm(styleProperty) ? 'col-7' : 'col-9'">
-      <input [(ngModel)]="styleProperty" (input)="emitStyleProperty()"
+      <input (input)="emitStyleProperty()" [(ngModel)]="styleProperty"
              [readOnly]="isEdit" class="form-control"
              id="{{mapType}}CssProperty"
              name="{{mapType}}CssProperty" type="text">
@@ -160,8 +160,8 @@
 
     <div *ngIf="!needsFontFaceSpecificForm(styleProperty)" class="col-2 form-check">
       <input (click)="toggleNeedsColorValidation(!needsColorValidation(styleProperty))"
-             [disabled]="isEdit"
-             [checked]="needsColorValidation(styleProperty)" class="form-check-input"
+             [checked]="needsColorValidation(styleProperty)"
+             [disabled]="isEdit" class="form-check-input"
              id="{{mapType}}ColorValidation"
              type="checkbox">
       <label class="form-check-label" for="{{mapType}}ColorValidation">
@@ -191,12 +191,12 @@
                  type="text"
                  value="{{'MAIN_MAPPINGS_NEW_PLACEHOLDER' | translate}}">
           <input *ngIf="needsColorValidation(styleProperty)"
-                 [disabled]="!mappingDiscrete.useValue[index]"
                  [(ngModel)]="mappingDiscrete.values[getIndexByKey(entry)]"
-                 type="color"
+                 [disabled]="!mappingDiscrete.useValue[index]"
                  class="form-control form-control-color"
                  id="colorDiscrete{{index}}"
                  name="colorDiscrete{{index}}"
+                 type="color"
                  value="{{mappingDiscrete.values[getIndexByKey(entry)]}}">
         </div>
         <div *ngIf="needsColorValidation(styleProperty)" class="col-1">
@@ -219,42 +219,44 @@
 
         <!-- font family -->
         <div [ngClass]="(setFonts[index] && isJavaLogicalFont(setFonts[index].family)) ? 'col-3' : 'col-6'">
-          <select class="custom-select" size="5" id="fontFaceFamily{{index}}">
-            <option value="null" (click)="setFont(index, null)">{{'MAIN_MAPPINGS_NEW_FONT_FAMILY_RESET' | translate}}</option>
-            <option *ngFor="let font of availableFonts"
-                    value="{{font}}"
-                    (click)="setFont(index, font)"
-                    [selected]="setFonts[index] && setFonts[index].family === font">{{font}}</option>
+          <select class="custom-select" id="fontFaceFamily{{index}}" size="5">
+            <option (click)="setFont(index, null)"
+                    value="null">{{'MAIN_MAPPINGS_NEW_FONT_FAMILY_RESET' | translate}}</option>
+            <option (click)="setFont(index, font)"
+                    *ngFor="let font of availableFonts"
+                    [selected]="setFonts[index] && setFonts[index].family === font"
+                    value="{{font}}">{{font}}</option>
           </select>
         </div>
 
         <!-- font style only java logical -->
-        <div class="col-3" *ngIf="setFonts[index] && isJavaLogicalFont(setFonts[index].family)">
-          <select class="custom-select" size="5" id="fontFaceStyle{{index}}">
-            <option value="null" (click)="setStyle(index, null)">{{'MAIN_MAPPINGS_NEW_FONT_STYLE_RESET' | translate}}</option>
-            <option *ngFor="let style of javaFontStyles"
-                    value="{{style}}"
+        <div *ngIf="setFonts[index] && isJavaLogicalFont(setFonts[index].family)" class="col-3">
+          <select class="custom-select" id="fontFaceStyle{{index}}" size="5">
+            <option (click)="setStyle(index, null)"
+                    value="null">{{'MAIN_MAPPINGS_NEW_FONT_STYLE_RESET' | translate}}</option>
+            <option (click)="setStyle(index, style)"
+                    *ngFor="let style of javaFontStyles"
                     [selected]="setFonts[index] && setFonts[index].style === style"
-                    (click)="setStyle(index, style)">{{style}}</option>
+                    value="{{style}}">{{style}}</option>
           </select>
         </div>
 
         <!-- font size -->
-        <div class="col-3" *ngIf="setFonts[index]">
+        <div *ngIf="setFonts[index]" class="col-3">
           <label for="fontFaceSize{{index}}">
-            <button class="btn btn-sm btn-outline-secondary mr-1"
+            <button (click)="setFonts[index].size = null"
+                    [disabled]="!setFonts[index].size"
+                    class="btn btn-sm btn-outline-secondary mr-1"
                     data-toggle="tooltip"
                     ngbTooltip="{{'MAIN_MAPPINGS_NEW_TT_FONT_SIZE' | translate}}"
-                    placement="top"
-                    [disabled]="!setFonts[index].size"
-                    (click)="setFonts[index].size = null">
+                    placement="top">
               <fa-icon [icon]="faRedo"></fa-icon>
             </button>
             {{'MAIN_MAPPINGS_NEW_FONT_SIZE' | translate}}
           </label>
-          <input class="form-control" type="number"
+          <input [(ngModel)]="setFonts[index].size" class="form-control"
                  id="fontFaceSize{{index}}" name="fontFaceSize{{index}}"
-                 [(ngModel)]="setFonts[index].size">
+                 type="number">
         </div>
 
       </div>
@@ -290,12 +292,12 @@
     <div class="col-4">
       <!-- submit: new -->
       <button (click)="submitNewMapping()" *ngIf="!isEdit && mapType.endsWith('d')"
-              [routerLink]="['', { outlets: {primary: ['mappings', mapType, mappingDiscrete.col ]} }]"
-              class="btn btn-block btn-outline-success" data-toggle="tooltip"
+              [disabled]="alreadyExists"
+              [routerLink]="['', { outlets: {primary: ['mappings', mapType, mappingDiscrete.col ]} }]" class="btn btn-block btn-outline-success"
+              data-toggle="tooltip"
               ngbTooltip="{{'MAIN_MAPPINGS_NEW_SUBMIT' | translate}}"
               placement="top"
-              type="button"
-              [disabled]="alreadyExists">
+              type="button">
         <fa-icon [icon]="faCheck"></fa-icon>
       </button>
       <!-- submit: edit -->
@@ -319,7 +321,7 @@
     <label class="col-4 col-form-label"
            for="{{typeHint.ep ? 'ep' : 'np'}}CssProperty">{{'MAIN_MAPPINGS_NEW_CSS_PROPERTY_LABEL' | translate}}</label>
     <div class="col-6">
-      <input [(ngModel)]="styleProperty" (input)="emitStyleProperty()"
+      <input (input)="emitStyleProperty()" [(ngModel)]="styleProperty"
              [readOnly]="isEdit" class="form-control"
              id="{{typeHint.ep ? 'ep' : 'np'}}CssProperty"
              name="{{typeHint.ep ? 'ep' : 'np'}}CssProperty" type="text">
@@ -356,12 +358,12 @@
     <div class="col-4">
       <!-- submit -->
       <button (click)="submitNewMapping()" *ngIf="!isEdit && mapType.endsWith('p')"
-              [routerLink]="['', { outlets: {primary: ['mappings', mapType + getNextIdForMappingType() ]} }]"
-              class="btn btn-block btn-outline-success" data-toggle="tooltip"
+              [disabled]="alreadyExists"
+              [routerLink]="['', { outlets: {primary: ['mappings', mapType + getNextIdForMappingType() ]} }]" class="btn btn-block btn-outline-success"
+              data-toggle="tooltip"
               ngbTooltip="{{'MAIN_MAPPINGS_NEW_SUBMIT' | translate}}"
               placement="top"
-              type="button"
-              [disabled]="alreadyExists">
+              type="button">
         <fa-icon [icon]="faCheck"></fa-icon>
       </button>
     </div>
