--- a/src/app/components/sidebar-image/sidebar-image.component.html
+++ b/src/app/components/sidebar-image/sidebar-image.component.html
@@ -5,10 +5,10 @@
     <a [routerLink]="['', { outlets: {sidebar: ['manage']} }]"
        class="mb-1"
        data-toggle="tooltip"
-       type="button"
-       ngbTooltip="{{'NAV_MANAGE' | translate}}" placement="right"
-       role="button">
-      <fa-icon class="mr-1" [icon]="faArrowLeft"></fa-icon>
+       ngbTooltip="{{'NAV_MANAGE' | translate}}"
+       placement="right" role="button"
+       type="button">
+      <fa-icon [icon]="faArrowLeft" class="mr-1"></fa-icon>
     </a>
     {{'SIDEBAR_IMAGE_TITLE' | translate}}
   </h5>
@@ -34,9 +34,9 @@
 
         <!-- Full vs viewport -->
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value=""
-                 id="fullViewportInput" name="fullViewportInput"
-                 [(ngModel)]="optFull">
+          <input [(ngModel)]="optFull" class="form-check-input" id="fullViewportInput"
+                 name="fullViewportInput" type="checkbox"
+                 value="">
           <label class="form-check-label" for="fullViewportInput">
             {{'SIDEBAR_IMAGE_FULL' | translate}}
           </label>
@@ -46,14 +46,14 @@
       </div>
 
       <div class="col-6">
-        <button type="button"
-                class="btn btn-block btn-outline-success dropdown-toggle"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button aria-expanded="false"
+                aria-haspopup="true"
+                class="btn btn-block btn-outline-success dropdown-toggle" data-toggle="dropdown" type="button">
           {{selectedFileType || 'SIDEBAR_IMAGE_SELECT_TYPE' | translate}}
         </button>
         <div class="dropdown-menu">
-          <a *ngFor="let option of fileTypeOptions" class="dropdown-item"
-             (click)="selectImageType(option)">{{option}}</a>
+          <a (click)="selectImageType(option)" *ngFor="let option of fileTypeOptions"
+             class="dropdown-item">{{option}}</a>
         </div>
 
       </div>
@@ -65,12 +65,12 @@
       <div class="col-6">
         <!-- BG white vs transparent: only for PNG -->
         <div class="form-check">
-          <input class="form-check-input"
-                 type="checkbox"
-                 value="optUseBg"
+          <input [(ngModel)]="optUseBg"
+                 class="form-check-input"
                  id="bgUse"
                  name="bgUse"
-                 [(ngModel)]="optUseBg">
+                 type="checkbox"
+                 value="optUseBg">
           <label class="form-check-label"
                  for="bgUse">
             {{'SIDEBAR_IMAGE_BG' | translate}}
@@ -78,8 +78,8 @@
         </div>
       </div>
 
-      <div class="col-2" *ngIf="optUseBg">
-        <button class="btn btn-outline-secondary" (click)="this.optBg = dataService.getBackgroundColor()">
+      <div *ngIf="optUseBg" class="col-2">
+        <button (click)="this.optBg = dataService.getBackgroundColor()" class="btn btn-outline-secondary">
           <fa-icon [icon]="faRedo"></fa-icon>
         </button>
       </div>
@@ -88,10 +88,10 @@
 
         <input *ngIf="optUseBg"
                [(ngModel)]="optBg"
-               type="color"
                class="form-control form-control-color"
                id="colorBg"
                name="colorBg"
+               type="color"
                value="{{optBg}}">
 
         <small *ngIf="selectedFileType !== 'PNG' && !optUseBg">{{'SIDEBAR_IMAGE_BG_HINT' | translate}}</small>
@@ -103,25 +103,25 @@
     <div class="row mb-2">
       <div class="col-6">
         <label for="widthInput">{{'SIDEBAR_IMAGE_WIDTH' | translate}}</label>
-        <input type="number" class="form-control" id="widthInput" name="widthInput" [(ngModel)]="optWidth">
+        <input [(ngModel)]="optWidth" class="form-control" id="widthInput" name="widthInput" type="number">
       </div>
       <div class="col-6">
         <label for="heightInput">{{'SIDEBAR_IMAGE_HEIGHT' | translate}}</label>
-        <input type="number" class="form-control" id="heightInput" name="heightInput" [(ngModel)]="optHeight">
+        <input [(ngModel)]="optHeight" class="form-control" id="heightInput" name="heightInput" type="number">
       </div>
     </div>
 
     <!-- Scale -->
     <div class="form-group mb-2">
       <label for="scaleInput">{{'SIDEBAR_IMAGE_SCALE' | translate}}</label>
-      <input type="range" class="form-control-range" id="scaleInput" name="scaleInput"
-             [(ngModel)]="optScale" min="1" max="10">
+      <input [(ngModel)]="optScale" class="form-control-range" id="scaleInput" max="10"
+             min="1" name="scaleInput" type="range">
       <small>{{'SIDEBAR_IMAGE_SCALE_HINT' | translate}}</small>
     </div>
   </form>
 
-  <button class="btn btn-lg btn-block btn-success" *ngIf="selectedFileType"
-          (click)="downloadImage()">
+  <button (click)="downloadImage()" *ngIf="selectedFileType"
+          class="btn btn-lg btn-block btn-success">
     {{'SIDEBAR_IMAGE_BTN_DOWNLOAD' | translate}}
   </button>
 
